added to package json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "syd-beer-client",
   "version": "0.1.0",
+  "homepage": "https://seando13.github.io/syd-beer-client/",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
@@ -13,7 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
